RESOLVED FIXED295219
REGRESSION (274503@main): ynet.co.il: Video in element screen is cropped
https://bugs.webkit.org/show_bug.cgi?id=295219
Summary REGRESSION (274503@main): ynet.co.il: Video in element screen is cropped
Andy Estes
Reported 2025-06-30 12:27:36 PDT
SSIA
Attachments
Andy Estes
Comment 1 2025-06-30 12:27:37 PDT
Andy Estes
Comment 2 2025-06-30 12:43:06 PDT
EWS
Comment 3 2025-06-30 20:27:41 PDT
Committed 296848@main (82a00cb3625e): <https://commits.webkit.org/296848@main> Reviewed commits have been landed. Closing PR #47388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.