REGRESSION (274503@main): ynet.co.il: Video in element fullscreen is cropped https://bugs.webkit.org/show_bug.cgi?id=295219 rdar://150685881

Reviewed by Wenson Hsieh.

In 274503@main we enforced a min/max/current zoom scale value of 1 on WKScrollView when in element
fullscreen. This ensures that if the user had pinched to zoom in on a page, that scale factor was
undone when entering fullscreen. However, 1 is not the correct scale value to apply for a page that
is wider than the screen's dimensions, and on such pages web content would appear cropped in element
fullscreen.

Addressed this by setting the min/max/current zoom scale to the initial zoom scale in element
fullscreen. This ensures that a wide page is scaled to fit the screen.

Added an API test.

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:
* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h:
* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _updateScrollViewForTransaction:]):
(-[WKWebView _forcesInitialScaleFactor]):
(-[WKWebView _setForcesInitialScaleFactor:]):
(-[WKWebView _overrideZoomScaleParametersWithMinimumZoomScale:maximumZoomScale:allowUserScaling:]): Deleted.
(-[WKWebView _clearOverrideZoomScaleParameters]): Deleted.
* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(WebKit::WKWebViewState::applyTo):
(-[WKFullScreenWindowController _enterFullScreen:windowScene:completionHandler:]):
(-[WKFullScreenWindowController _reinsertWebViewUnderPlaceholder]):
* Tools/TestWebKitAPI/SourcesCocoa.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UI/ElementFullscreen.mm: Added.
(-[TestElementFullscreenDelegate waitForDidEnterElementFullscreen]):
(-[TestElementFullscreenDelegate _webViewDidEnterElementFullscreen:]):
(TEST(ElementFullscreen, ScrollViewSetToInitialScale)):

Canonical link: https://commits.webkit.org/296848@main