Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h
@@ -193,12 +193,6 @@ struct OverriddenLayoutParameters {
     CGSize maximumUnobscuredSize { CGSizeZero };
 };
 
-struct OverriddenZoomScaleParameters {
-    CGFloat minimumZoomScale { 1 };
-    CGFloat maximumZoomScale { 1 };
-    BOOL allowUserScaling { YES };
-};
-
 // This holds state that should be reset when the web process exits.
 struct PerWebProcessState {
     CGFloat viewportMetaTagWidth { WebCore::ViewportArguments::ValueAuto };
@@ -348,7 +342,9 @@ struct PerWebProcessState {
     PerWebProcessState _perProcessState;
 
     std::optional<OverriddenLayoutParameters> _overriddenLayoutParameters;
-    std::optional<OverriddenZoomScaleParameters> _overriddenZoomScaleParameters;
+#if PLATFORM(IOS_FAMILY)
+    BOOL _forcesInitialScaleFactor;
+#endif
     CGRect _inputViewBoundsInWindow;
 
     BOOL _fastClickingIsDisabled;
